--- a/index.html
+++ b/index.html
@@ -18,8 +18,19 @@
 </head>
 
 <body>
+    <div class="hello-div">
+        <div>
+            <h3>Wellcom to Your Todo List!</h3>
+            <form>
+                <input type="text" class="userName-input" placeholder="What is your name?" autocomplete="off"
+                    maxlength="12">
+                <button type="submit" class="userName-button">Enter</button>
+            </form>
+        </div>
+    </div>
+
     <header class="flex-center">
-        <h1>Sahar's Todo List</h1>
+        <h1><span class="userName">Sahar</span>'s Todo List </h1>
         <form class="flex-center">
             <input type="text" class="todo-input" placeholder="What do you need to do? ">
             <button type="submit" class="todo-add"><i class="fa-solid fa-plus"></i></button>
@@ -27,7 +38,6 @@
     </header>
 
     <article>
-        
         <div class="todo-container ">
             <ul class="todo-list"></ul>
         </div>
