Update the name setting interface and hide the 'Done' list when there are no items.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 
 <body>
     <div class="hello-div">
-        <div>
+        <div class="hello-div-shadow">
+        </div>
+        <div class="hello-div-box">
             <h3>Wellcom to Your Todo List!</h3>
             <form>
                 <input type="text" class="userName-input" placeholder="What is your name?" autocomplete="off"
@@ -42,11 +44,12 @@
             <ul class="todo-list"></ul>
         </div>
 
-        <h2>Done
-            <hr>
-        </h2>
+
 
         <div class="todo-container">
+            <h2>Done
+                <hr>
+            </h2>
             <ul class="done-list"></ul>
         </div>
     </article>
