Add 'Clear All Data' button

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <form>
                 <input type="text" class="userName-input" placeholder="What is your name?" autocomplete="off"
                     maxlength="12">
-                <button type="submit" class="userName-button">Enter</button>
+                <button type="submit" class="btn userName-button">Enter</button>
             </form>
         </div>
     </div>
@@ -51,6 +51,11 @@
                 <hr>
             </h2>
             <ul class="done-list"></ul>
+        </div>
+
+
+        <div>
+            <button class="btn clear-data-btn">Clear All Data</button>
         </div>
     </article>
 
